fix display on smaller screen

--- a/internal/web/playground.css
+++ b/internal/web/playground.css
@@ -118,7 +118,6 @@ a {
 .toolbar .controls {
     margin-left: 230px;
     padding: 10px 15px;
-    vertical-align: middle;
 }
 
 .toolbar .controls>:last-child {
@@ -126,7 +125,7 @@ a {
 }
 
 .toolbar .controls>:last-child>input[type=button] {
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 .toolbar label {
@@ -339,13 +338,10 @@ a {
         margin: 0;
     }
     .toolbar .controls>:nth-child(2),
-    .toolbar .controls>:nth-child(5),
+    .toolbar .controls>:nth-child(4),
     .toolbar .controls>:nth-child(6),
-    .toolbar .controls>:nth-child(7),
-    .toolbar .controls>:nth-child(8),
-    .toolbar .controls>:nth-child(9),
-    .toolbar .controls>:nth-child(10),
-    .toolbar .controls>:nth-child(11),
+    .toolbar label,
+    .toolbar .controls>:last-child>:nth-child(2),
     .toolbar .title {
         display: none;
     }
@@ -374,11 +370,8 @@ a {
 
 @media only screen and (min-width:1000px) and (max-width:1450px) {
     .toolbar .controls>:nth-child(2),
-    .toolbar .controls>:nth-child(7),
-    .toolbar .controls>:nth-child(8),
-    .toolbar .controls>:nth-child(9),
-    .toolbar .controls>:nth-child(10),
-    .toolbar .controls>:nth-child(11) {
+    .toolbar label,
+    .toolbar .controls>:last-child>:nth-child(2) {
         display: none;
     }
 }
